# build_pyoptsparse

./: NOTICE  README.md  __main__.py  build_pyoptsparse.py  build_pyoptsparse.sh  pixi.toml  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test_workflow.yml  test_workflow_pixi.yml
build_pyoptsparse/: __main__.py  build_pyoptsparse.py  build_snopt_module.py  grab-all-fortran-files.py  snopt_module.py
build_pyoptsparse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
build_pyoptsparse/test/: test_snopt_module.py
